# gptweet-plugin

./: .env  .env.test  Makefile  pyproject.toml
.well-known/: ai-plugin.json  openapi.yaml
server/: main.py  utils.py
server/datastore/: users_repository.py  utils.py
server/models/: base.py  config.py
server/routers/: auth0_routes.py  auth0_utils.py  google_routes.py  twitter_routes.py  twitter_utils.py
server/services/: auth0_ops.py  browse.py  llm_utils.py  search.py  twitter_ops.py  web_ops.py
static/: index.html  logo1.html  privacy-policy.md
tests/: test_login_repository.py  test_openai.py  test_pinecone.py  test_search.py  twitter_service.py
